# luduan

./: .gitignore  Cargo.toml  Luduan.spec  Makefile  README.md  build_and_release.sh  pyproject.toml  test.sh
docs/: README.en.md  README.fr.md  README.sv.md  README.zh-CN.md
examples/: context-file-template.txt  harry_potter_chinese.txt  harry_potter_english.txt  harry_potter_swedish.txt
rust-cli/: Cargo.toml
rust-cli/src/: main.rs
scripts/: benchmark.sh
src/: main.rs
src/luduan/: __init__.py  audio.py  config.py  context.py  log.py  main.py  output.py  postprocessor.py  transcriber.py
tests/fixtures/e2e/: README.md  context.txt  manifest.tsv
tests/fixtures/e2e/expected/: en_01_product_update.txt  en_02_support_note.txt  hp_sv_01.txt  mix_zh_en_01_engineering.txt  mix_zh_en_02_names_tools.txt  sv_01_meeting_note.txt  sv_02_travel_plan.txt  zh_01_daily_status.txt  zh_02_terms_and_names.txt
