[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luduan"
version = "0.1.1"
description = "macOS audio-to-text tool using Whisper + Ollama"
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.7",
    "sounddevice>=0.5.1",
    "numpy>=2.0",
    "mlx-whisper>=0.4.2",
    "httpx>=0.28.0",
    "pyperclip>=1.9.0",
    "tomli>=2.2.0; python_version < '3.11'",
    "tomli-w>=1.1.0",
]

[project.scripts]
luduan = "luduan.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/luduan"]
