[package]
name = "luduan-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "luduan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.17.3"
ctrlc = "3.5.2"
directories = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
whisper-rs = { version = "0.16.0", features = ["metal"] }
